<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="androidLargeSevenVM" type="com.parveensapplication.app.modules.androidlargeseven.data.viewmodel.AndroidLargeSevenVM"/>
    </data>
    <FrameLayout android:id="@+id/frameAndroidLarge"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylegray_900">
        <LinearLayout android:id="@+id/linearColumnstepthirtyfive"
            android:layout_gravity="top|start"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar android:gravity="start"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:id="@+id/linearRowstepthirtyfive"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal" style="@style/groupStylegray_800">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtSTEPThirtyFive"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_8pxv"
                        android:layout_marginStart="@dimen/_32pxh"
                        android:layout_marginTop="@dimen/_27pxv"
                        android:layout_weight="0.71"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{androidLargeSevenVM.androidLargeSevenModel.txtSTEPThirtyFive}"
                        style="@style/txtInterregular12" tools:text="@string/lbl_step_3_5"/>
                    <ImageView android:id="@+id/imageVector"
                        android:layout_height="@dimen/_23pxh"
                        android:layout_marginBottom="@dimen/_14pxv"
                        android:layout_marginEnd="@dimen/_18pxh"
                        android:layout_marginStart="@dimen/_235pxh"
                        android:layout_marginTop="@dimen/_14pxv"
                        android:layout_width="@dimen/_21pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_vector_black_900_18x15"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_vector_black_900_18x15"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLanguage"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_42pxh"
                android:layout_marginStart="@dimen/_42pxh"
                android:layout_marginTop="@dimen/_26pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{androidLargeSevenVM.androidLargeSevenModel.txtLanguage}"
                style="@style/txtInterregular24_1" tools:text="@string/lbl_add_video"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowshowyourskins"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_60pxh"
                android:layout_marginStart="@dimen/_60pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtShowyourskins"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.68"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{androidLargeSevenVM.androidLargeSevenModel.txtShowyourskins}"
                    style="@style/txtInterregular12_1" tools:text="@string/msg_show_your_skins"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtOptional"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_4pxh"
                    android:layout_weight="0.32"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{androidLargeSevenVM.androidLargeSevenModel.txtOptional}"
                    style="@style/txtInterregular12_1" tools:text="@string/lbl_optional"/>
            </LinearLayout>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtFilesize"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_60pxh"
                android:layout_marginStart="@dimen/_60pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{androidLargeSevenVM.androidLargeSevenModel.txtFilesize}"
                style="@style/txtInterregular12_1" tools:text="@string/msg_video_shoud_not"/>
            <FrameLayout android:id="@+id/frameStackvectorOne"
                android:layout_gravity="end"
                android:layout_height="@dimen/_169pxv"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="@dimen/_304pxh" style="@style/groupStylebluegray_100">
                <ImageView android:id="@+id/imageVectorOne"
                    android:layout_gravity="top|center"
                    android:layout_height="@dimen/_17pxh"
                    android:layout_marginBottom="@dimen/_71pxv"
                    android:layout_marginEnd="@dimen/_140pxh"
                    android:layout_marginStart="@dimen/_140pxh"
                    android:layout_marginTop="@dimen/_71pxv"
                    android:layout_width="@dimen/_17pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_vector_black_900_17x17"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_vector_black_900_17x17"/>
            </FrameLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLogins"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_41pxh"
                android:layout_marginStart="@dimen/_41pxh"
                android:layout_marginTop="@dimen/_31pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{androidLargeSevenVM.androidLargeSevenModel.txtLogins}"
                style="@style/txtInterregular24" tools:text="@string/lbl_logins"/>
            <LinearLayout android:id="@+id/linearRowfacebook"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnFacebook"
                    android:layout_height="@dimen/_38pxv"
                    android:layout_width="@dimen/_108pxh"
                    android:paddingBottom="@dimen/_8pxv"
                    android:paddingEnd="@dimen/_13pxh"
                    android:paddingStart="@dimen/_15pxh"
                    android:paddingTop="@dimen/_8pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_facebook"
                    android:textAllCaps="false"
                    style="@style/btnSolid_4" tools:text="@string/lbl_facebook"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnGoogle"
                    android:layout_height="@dimen/_38pxv"
                    android:layout_marginStart="@dimen/_47pxh"
                    android:layout_width="@dimen/_108pxh"
                    android:paddingBottom="@dimen/_8pxv"
                    android:paddingEnd="@dimen/_22pxh"
                    android:paddingStart="@dimen/_26pxh"
                    android:paddingTop="@dimen/_8pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_google"
                    android:textAllCaps="false"
                    style="@style/btnSolid_4" tools:text="@string/lbl_google"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowtwitter"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnTwitter"
                    android:layout_height="@dimen/_38pxv"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_width="@dimen/_110pxh"
                    android:paddingBottom="@dimen/_8pxv"
                    android:paddingEnd="@dimen/_29pxh"
                    android:paddingStart="@dimen/_21pxh"
                    android:paddingTop="@dimen/_8pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_twitter"
                    android:textAllCaps="false"
                    style="@style/btnSolid_4" tools:text="@string/lbl_twitter"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnSuperCell"
                    android:layout_height="@dimen/_38pxv"
                    android:layout_marginStart="@dimen/_46pxh"
                    android:layout_width="@dimen/_111pxh"
                    android:paddingBottom="@dimen/_8pxv"
                    android:paddingEnd="@dimen/_13pxh"
                    android:paddingStart="@dimen/_13pxh"
                    android:paddingTop="@dimen/_8pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_super_cell"
                    android:textAllCaps="false"
                    style="@style/btnSolid_4" tools:text="@string/lbl_super_cell"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowbuilderhall"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_49pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtBUILDERHall"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.74"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{androidLargeSevenVM.androidLargeSevenModel.txtBUILDERHall}"
                    style="@style/txtInterregular24" tools:text="@string/lbl_builder_hall"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtOptionalOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_marginStart="@dimen/_48pxh"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_weight="0.26"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{androidLargeSevenVM.androidLargeSevenModel.txtOptionalOne}"
                    style="@style/txtInterregular12_1" tools:text="@string/lbl_optional"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumnlineeight"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegray_800">
                <View android:background="@color/black_900"
                    android:id="@+id/lineLineEight"
                    android:layout_gravity="end"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_14pxv"
                    android:layout_marginEnd="@dimen/_7pxh"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_marginTop="@dimen/_32pxv" android:layout_width="@dimen/_270pxh"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowback"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_103pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnBack"
                    android:layout_height="@dimen/_45pxv"
                    android:layout_width="@dimen/_110pxh"
                    android:paddingBottom="@dimen/_14pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_14pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_back"
                    android:textAllCaps="false"
                    style="@style/btnSolid_2" tools:text="@string/lbl_back"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnNext"
                    android:layout_height="@dimen/_45pxv"
                    android:layout_marginStart="@dimen/_58pxh"
                    android:layout_width="@dimen/_110pxh"
                    android:paddingBottom="@dimen/_14pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_14pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_next"
                    android:textAllCaps="false"
                    style="@style/btnSolid_3" tools:text="@string/lbl_next"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
